# screenshot-manager

./: .gitignore  Cargo.toml
src/: main.rs
