[package]
name = "screenshot-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
notify = "6.1.1"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
const_format = "0.2.32"
anyhow = "1.0.82"
signal-hook = "0.3.17"
